profile and forget password controller added
